<resources>

    <!-- <string name="app_name">WeiK</string> -->
    <!-- <string name="menu_settings">Settings</string> -->
    <!-- <string name="title_activity_main">WeiK</string> -->
    <!-- <string name="login_weibo">Login Weibo</string> -->
    <!-- <string name="loading">Loading</string> -->

    <string name="app_name">威快</string>
    <string name="menu_settings">设置</string>
    
    <string name="title_activity_tweet">新微博</string>
    <string name="title_activity_status_pager">左右滑动</string>
    <string name="title_activity_status">微博</string>
    <string name="title_activity_user">用户</string>
    <string name="title_activity_web">网页</string>
    <string name="title_activity_relationship">朋友</string>
    <string name="title_activity_comment_repost">评论转发</string>
    
    <string name="login_weibo">登录微博</string>
    <string name="loading">载入中</string>
    <string name="weibo">微博</string>
    <string name="following">关注</string>
    <string name="followers">粉丝</string>
    <string name="follow">关注</string>
    <string name="unfollow">取消关注</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="discard">放弃</string>
    <string name="please_enter_text">有什么有趣的？</string>
    <string name="take_new_photo">照一张新照片</string>
    <string name="choose_existing_photo">选择已有照片</string>
    <string name="weibo_picture">微博图片</string>
    <string name="sending">正在发送微博</string>
    <string name="discard_prompt">微博还未发送，确定退出？</string>
    <string name="send_success">微博发送成功！</string>
    <string name="send_failed">微博发送失败！</string>
    <string name="is_following_me">正在关注我</string>
    <string name="is_not_following_me">尚未关注我</string>
    <string name="reminder_btn">知道啦</string>
    <string name="reminder_status_swipe">可以左右滑动哦～</string>
    <string name="repost">转发</string>
    <string name="comment">评论</string>
    <string name="local_photo_only">不好意思，只能选择本地照片</string>
    <string name="log_out">登出微博</string>
    <string name="big_pic">打开大图</string>
    <string name="show_cached_only">仅显示缓存</string>
    <string name="show_everything">显示所有</string>
    <string name="clear_cache">清除缓存</string>
    <string name="prefs">设置</string>
    <string name="no_new_weibo">没有新的微博了～</string>
    <string name="getting_new_weibo">下载新的微博</string>
    <string name="open_in_browser">在浏览器中打开</string>

    <string name="promote_title">感谢您</string>
    <string name="promote_text">如果您喜欢威快，请帮我们推广一下，多谢～</string>
    <string name="promote_tweet">我正在使用 #威快# #Weik# Android，超快无广告的微博客户端，很不错哦～</string>
    <string name="promote_yes">好的呐～</string>
    <string name="promote_no">还是不要了</string>
    
    <string name="tab_home">主页</string>
    <string name="tab_mention">提到</string>
    <string name="tab_comment">评论</string>
    <string name="tab_people">朋友</string>
</resources>